@startuml classDiagram
    
class CommandType {
    <<enumeration>>
    REGISTER
    LOGIN
    LOGOUT
    PUBLIC_CHAT
    PRIVATE_CHAT
    LIST_ONLINE_USERS
    JOIN_PUBLIC_CHAT_ROOM
    LEAVE_PUBLIC_CHAT_ROOM
    LIST_USERS_IN_PUBLIC_CHAT_ROOM
    UNKNOWN
}

class ResponseType {
    <<enumeration>>
    SUCCESS
    ERROR
    BROADCAST
    DIRECT_MESSAGE
    LIST_RESULT
}

class ResponseDestination {
    <<enumeration>>
    DIRECT_TO_CLIENT
    BROADCAST_PUBLIC_CHAT_ROOM
    ERROR_TO_CLIENT
    BACK_TO_CLIENT
}

class MessageType {
    <<enumeration>>
    INCOMING_MESSAGE
    SHUTDOWN
}

class DBOperationType {
    <<enumeration>>
    REGISTER_USER
    VERIFY_LOGIN
    UPDATE_LAST_LOGIN
    GET_USER
    CHECK_USERNAME_EXISTS
}

class LogLevel {
    <<enumeration>>
    DEBUG
    INFO
    WARNING
    ERROR
}

class Command {
    +CommandType type
    +vector~string~ args
    +string raw_message
    +Command(CommandType t)
}

class IncomingMessage {
    +ConnectionPtr connection
    +string content
    +int fd
}

class Message {
    +MessageType type
    +MessagePayload payload
}

class HandlerRequest {
    +ConnectionPtr connection
    +CommandPtr command
    +int fd
    +int request_id
    +int user_destination
}

class HandlerResponse {
    +ConnectionPtr connection
    +string response_message
    +int fd
    +int request_id
    +ResponseDestination destination
    +int exclude_fd
    +int user_destination
    +HandlerResponse()
}

class DBRequest {
    +DBOperationType type
    +string username
    +string password
    +int fd
    +int request_id
    +function callback
}

class Connection {
    -atomic~int~ fd
    -atomic~bool~ closed
    -mutex close_mutex
    +Connection(int socket_fd)
    +~Connection()
    +int getFd()
    +bool isClosed()
    +void close()
}

class EpollInstance {
    -int epfd
    -unordered_set~int~ epoll_fds
    -unordered_map~int,Callback~ handlers
    -unordered_map~int,ConnectionPtr~ connections
    -mutex handlers_mutex
    -atomic~bool~ should_stop
    +EpollInstance()
    +~EpollInstance()
    +void addFd(int fd, Callback cb, ConnectionPtr conn)
    +void removeFd(int fd)
    +ConnectionPtr getConnection(int fd)
    +void run()
    +void stop()
    +bool isStopped()
    +bool isEpollMember(int fd)
    +vector~ConnectionPtr~ getAllConnections()
}

class EpollThread {
    -EpollInstancePtr epoll_instance
    -thread worker_thread
    -atomic~bool~ running
    -void run()
    +EpollThread(EpollInstancePtr epoll)
    +void start()
    +void stop()
    +EpollInstancePtr getEpoll()
}

class TCPServer {
    -int listen_fd
    -EpollInstancePtr epoll_instance
    -ThreadPoolPtr thread_pool_instance
    -shared_ptr~MessageQueue~ to_router_queue
    -void onAccept(int fd)
    -void onRead(int clientFd)
    +TCPServer(sockaddr_in& addr, EpollInstancePtr, ThreadPoolPtr, MessageQueuePtr)
    +~TCPServer()
    +void startServer()
    +void stopServer()
}

class ThreadPool {
    -vector~thread~ workers
    -queue~function~ tasks
    -mutex mtx
    -condition_variable cv
    -atomic~bool~ stop
    +ThreadPool(size_t n)
    +~ThreadPool()
    +void submit(function task)
}

class MessageQueue~T~ {
    -queue~T~ queue
    -mutex mtx
    -condition_variable cv
    -bool stopped
    +void push(T item)
    +optional~T~ pop(int timeout_ms)
    +void stop()
    +size_t size()
    +bool isStopped()
}

class CommandParser {
    +CommandPtr parse(string& raw_message, IncomingMessage& incoming, EpollInstancePtr)
}

class ChatControllerThread {
    -shared_ptr~MessageQueue~ incoming_queue
    -unordered_map~CommandType,MessageQueuePtr~ handler_queues
    -EpollInstancePtr epoll_instance
    -thread worker_thread
    -atomic~bool~ running
    -atomic~int~ request_counter
    -void run()
    -void routeMessage(IncomingMessage& incoming, CommandParser& parser)
    +ChatControllerThread(MessageQueuePtr, EpollInstancePtr)
    +void registerHandlerQueue(CommandType type, MessageQueuePtr queue)
    +void start()
    +void stop()
}

class Responser {
    -shared_ptr~MessageQueue~ response_queue
    -ThreadPoolPtr thread_pool
    -EpollInstancePtr epoll_instance
    -thread worker_thread
    -atomic~bool~ running
    -void run()
    -void sendBackToClient(HandlerResponsePtr resp)
    -void sendToClient(HandlerResponsePtr resp)
    -void broadcastToRoom(HandlerResponsePtr resp)
    +Responser(MessageQueuePtr, ThreadPoolPtr, EpollInstancePtr)
    +void start()
    +void stop()
}

class MessageHandler {
    <<abstract>>
    +virtual string handleMessage(ConnectionPtr, CommandPtr, EpollInstancePtr)*
}

class RegisterAccountHandler {
    -DataBaseThreadPtr db_thread
    -string result
    -mutex result_mutex
    -condition_variable result_cv
    -bool done
    +RegisterAccountHandler(DataBaseThreadPtr)
    +string handleMessage(ConnectionPtr, CommandPtr, EpollInstancePtr)
}

class LoginChatHandler {
    -DataBaseThreadPtr db_thread
    -string result
    -mutex result_mutex
    -condition_variable result_cv
    -bool done
    -bool login_success
    +LoginChatHandler(DataBaseThreadPtr)
    +string handleMessage(ConnectionPtr, CommandPtr, EpollInstancePtr)
}

class LogoutChatHandler {
    +string handleMessage(ConnectionPtr, CommandPtr, EpollInstancePtr)
}

class PublicChatHandler {
    +string handleMessage(ConnectionPtr, CommandPtr, EpollInstancePtr)
}

class PrivateChatHandler {
    +string handleMessage(ConnectionPtr, CommandPtr, EpollInstancePtr)
}

class ListUsersHandler {
    +string handleMessage(ConnectionPtr, CommandPtr, EpollInstancePtr)
}

class JoinPublicChatHandler {
    +string handleMessage(ConnectionPtr, CommandPtr, EpollInstancePtr)
}

class LeavePublicChatHandler {
    +string handleMessage(ConnectionPtr, CommandPtr, EpollInstancePtr)
}

class BaseThreadHandler {
    <<abstract>>
    #MessageHandlerPtr message_handler
    #shared_ptr~MessageQueue~ request_queue
    #shared_ptr~MessageQueue~ response_queue
    #thread worker_thread
    #atomic~bool~ running
    #string handler_name
    #virtual void run()*
    +BaseThreadHandler(MessageHandlerPtr, MessageQueuePtr, MessageQueuePtr, string)
    +virtual ~BaseThreadHandler()
    +void start()
    +void stop()
}

class RegisterAccountThreadHandler {
    -shared_ptr~RegisterAccountHandler~ register_account_handler
    #void run()
    +RegisterAccountThreadHandler(RegisterAccountHandlerPtr, MessageQueuePtr, MessageQueuePtr)
}

class LoginChatThreadHandler {
    -shared_ptr~LoginChatHandler~ login_handler
    #void run()
    +LoginChatThreadHandler(LoginChatHandlerPtr, MessageQueuePtr, MessageQueuePtr)
}

class LogoutChatThreadHandler {
    -shared_ptr~LogoutChatHandler~ logout_handler
    #void run()
    +LogoutChatThreadHandler(LogoutChatHandlerPtr, MessageQueuePtr, MessageQueuePtr)
}

class PublicChatThreadHandler {
    -shared_ptr~PublicChatHandler~ public_chat_handler
    #void run()
    +PublicChatThreadHandler(PublicChatHandlerPtr, MessageQueuePtr, MessageQueuePtr)
}

class PrivateChatThreadHandler {
    -shared_ptr~PrivateChatHandler~ private_chat_handler
    -shared_ptr~EpollInstance~ epoll_instance
    #void run()
    +PrivateChatThreadHandler(PrivateChatHandlerPtr, MessageQueuePtr, MessageQueuePtr, EpollInstancePtr)
}

class ListUsersThreadHandler {
    -shared_ptr~ListUsersHandler~ list_users_handler
    -shared_ptr~EpollInstance~ epoll_instance
    #void run()
    +ListUsersThreadHandler(ListUsersHandlerPtr, MessageQueuePtr, MessageQueuePtr, EpollInstancePtr)
}

class JoinPublicChatThreadHandler {
    -shared_ptr~JoinPublicChatHandler~ join_handler
    #void run()
    +JoinPublicChatThreadHandler(JoinPublicChatHandlerPtr, MessageQueuePtr, MessageQueuePtr)
}

class LeavePublicChatThreadHandler {
    -shared_ptr~LeavePublicChatHandler~ leave_handler
    #void run()
    +LeavePublicChatThreadHandler(LeavePublicChatHandlerPtr, MessageQueuePtr, MessageQueuePtr)
}

class User {
    +int id
    +string username
    +string password_hash
    +string created_at
    +string last_login
}

class DataBaseManager {
    -sqlite3* db
    -mutex db_mutex
    -string db_path
    -string hashPassword(string& password)
    +DataBaseManager(string& db_file)
    +~DataBaseManager()
    +static DataBaseManager& getInstance()
    +bool initialize()
    +bool registerUser(string& username, string& password)
    +bool verifyLogin(string& username, string& password)
    +bool usernameExists(string& username)
    +bool updateLastLogin(string& username)
    +optional~User~ getUser(string& username)
    +vector~string~ getAllUsernames()
}

class DataBaseThread {
    -shared_ptr~MessageQueue~ request_queue
    -thread worker_thread
    -atomic~bool~ running
    -DatabaseManagerPtr db_manager
    -void run()
    -void processRequest(DBRequestPtr req)
    +DataBaseThread()
    +~DataBaseThread()
    +void start()
    +void stop()
    +void submitRequest(DBRequestPtr req)
}

class UserManager {
    -unordered_map~int,string~ fd_to_username
    -unordered_map~string,int~ username_to_fd
    -mutex user_mutex
    +static UserManager& getInstance()
    +void loginUser(int fd, string& username)
    +void logoutUser(int fd)
    +optional~string~ getUsername(int fd)
    +optional~int~ getFd(string& username)
    +bool isLoggedIn(int fd)
    +bool isUsernameLoggedIn(string& username)
    +vector~pair~ getAllLoggedInUsers()
}

class PublicChatRoom {
    -unordered_set~int~ participants
    -mutex room_mutex
    +PublicChatRoom& getInstance()
    +void join(int fd)
    +void leave(int fd)
    +unordered_set~int~ getParticipants()
    +bool isParticipant(int fd)
    +size_t getParticipantsCount()
}

class LogMessage {
    +LogLevel level
    +string message
    +string file
    +int line
    +chrono::time_point timestamp
    +thread::id thread_id
}

class Logger {
    -ofstream log_file
    -queue~LogMessage~ log_queue
    -mutex queue_mutex
    -condition_variable queue_cv
    -atomic~bool~ running
    -thread worker
    -LogLevel current_level
    -atomic~bool~ console_output
    -atomic~bool~ file_output
    -string getCurrentTime(time_point& tp)
    -string logLevelToString(LogLevel level)
    -string getColorCode(LogLevel level)
    -void processLog(LogMessage& msg)
    -void workerThread()
    -void pushLog(LogLevel, string&, string&, int)
    +static Logger& getInstance()
    +void setLogLevel(LogLevel level)
    +void setConsoleOutput(bool enable)
    +void setFileOutput(bool enable)
    +void setLogFile(string& filename)
    +void debug(string& message, string& file, int line)
    +void info(string& message, string& file, int line)
    +void warning(string& message, string& file, int line)
    +void error(string& message, string& file, int line)
    +void flush()
    +void stop()
}

Command --> CommandType : uses
CommandParser ..> Command : creates

Message --> MessageType : uses
Message --> IncomingMessage : contains
HandlerRequest --> Command : uses
HandlerResponse --> ResponseDestination : uses
DBRequest --> DBOperationType : uses

TCPServer --> EpollInstance : uses
TCPServer --> ThreadPool : uses
TCPServer --> MessageQueue : uses
TCPServer --> Connection : manages
EpollInstance --> Connection : manages
EpollThread --> EpollInstance : wraps

ChatControllerThread --> CommandParser : uses
ChatControllerThread --> EpollInstance : uses
ChatControllerThread --> MessageQueue : uses
CommandParser --> PublicChatRoom : queries

Responser --> ThreadPool : uses
Responser --> EpollInstance : uses
Responser --> MessageQueue : uses
Responser --> PublicChatRoom : uses

MessageHandler <|-- RegisterAccountHandler : implements
MessageHandler <|-- LoginChatHandler : implements
MessageHandler <|-- LogoutChatHandler : implements
MessageHandler <|-- PublicChatHandler : implements
MessageHandler <|-- PrivateChatHandler : implements
MessageHandler <|-- ListUsersHandler : implements
MessageHandler <|-- JoinPublicChatHandler : implements
MessageHandler <|-- LeavePublicChatHandler : implements

RegisterAccountHandler --> DataBaseThread : uses
LoginChatHandler --> DataBaseThread : uses
LoginChatHandler --> UserManager : uses
LogoutChatHandler --> UserManager : uses
PublicChatHandler --> PublicChatRoom : uses
PublicChatHandler --> UserManager : uses
PrivateChatHandler --> UserManager : uses
PrivateChatHandler --> PublicChatRoom : uses
ListUsersHandler --> UserManager : uses
JoinPublicChatHandler --> PublicChatRoom : uses
JoinPublicChatHandler --> UserManager : uses
LeavePublicChatHandler --> PublicChatRoom : uses
LeavePublicChatHandler --> UserManager : uses

BaseThreadHandler <|-- RegisterAccountThreadHandler : extends
BaseThreadHandler <|-- LoginChatThreadHandler : extends
BaseThreadHandler <|-- LogoutChatThreadHandler : extends
BaseThreadHandler <|-- PublicChatThreadHandler : extends
BaseThreadHandler <|-- PrivateChatThreadHandler : extends
BaseThreadHandler <|-- ListUsersThreadHandler : extends
BaseThreadHandler <|-- JoinPublicChatThreadHandler : extends
BaseThreadHandler <|-- LeavePublicChatThreadHandler : extends

BaseThreadHandler --> MessageHandler : uses
BaseThreadHandler --> MessageQueue : uses
RegisterAccountThreadHandler --> RegisterAccountHandler : uses
LoginChatThreadHandler --> LoginChatHandler : uses
LogoutChatThreadHandler --> LogoutChatHandler : uses
PublicChatThreadHandler --> PublicChatHandler : uses
PrivateChatThreadHandler --> PrivateChatHandler : uses
PrivateChatThreadHandler --> EpollInstance : uses
ListUsersThreadHandler --> ListUsersHandler : uses
ListUsersThreadHandler --> EpollInstance : uses
JoinPublicChatThreadHandler --> JoinPublicChatHandler : uses
LeavePublicChatThreadHandler --> LeavePublicChatHandler : uses

DataBaseThread --> DataBaseManager : uses
DataBaseThread --> MessageQueue : uses
DataBaseManager --> User : manages

Logger --> LogMessage : uses
Logger --> LogLevel : uses

@enduml